# etu

./: Makefile  README.md  Tukalkin_Vladimir_cw.c  cw1.c  proga.c  Условие
MASM/: AFD.COM  HELLO1.ASM  HELLO2.ASM  LR2.ASM  LR3.asm  LR4.asm  lr5.s  Шаблон к ЛР3.ods
Naval_battle/: Тукалкин В.А. лаба1.docx  Тукалкин В.А. лаба2.docx  Тукалкин В.А. лаба3.docx  (+1 more)
Naval_battle/src/: AbilityManager.cpp  AbilityManager.h  CMakeLists.txt  FieldRenderer.cpp  FieldRenderer.h  Game.cpp  Game.h  GameController.h  GameField.cpp  GameField.h  GameLoop.cpp  GameLoop.h  GameRenderer.h  GameSaverLoader.cpp  GameSaverLoader.h  GameState.cpp  GameState.h  InfoHolder.cpp  InfoHolder.h  Player.cpp  Player.h  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  TerminalInputHandler.cpp  TerminalInputHandler.h  commands.txt  main.cpp
Naval_battle/src/Abilities/: Ability.h  DoubleDamageAbility.cpp  DoubleDamageAbility.h  DoubleDamageAbilityFactory.cpp  DoubleDamageAbilityFactory.h  IAbility.h  IAbilityFactory.h  ScannerAbility.cpp  ScannerAbility.h  ScannerAbilityFactory.cpp  ScannerAbilityFactory.h  ShootingAbility.cpp  ShootingAbility.h  ShootingAbilityFactory.cpp  ShootingAbilityFactory.h
Naval_battle/src/Exceptions/: InvalidPlacementShipException.h  NoAbilityException.h  OutOfFieldAttackException.h
PA/: task_1.md  (+3 more)
PA/Tukalkin_Vladimir_lb2/: CMakeLists.txt  Tukalkin_Vladimir_lb2.docx  Tukalkin_Vladimir_lb2.odt  замеры.py
PA/Tukalkin_Vladimir_lb2/include/: HazardPointer.h  IThreadSafeList.h  LockFreeList.h  LockFreeNode.h  Node.h  NodeWithLock.h  RoughBlockingList.h  ThinBlockingList.h
PA/Tukalkin_Vladimir_lb2/src/: main.cpp
(+377 files in other folders)
